[package]
name = "replaces"
version = "0.0.2"
edition = "2021"
description = "A CLI tool for replace *.txt string"
authors = ["hzqd <hzqelf@yeah.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hzqd/replace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoko = "0.3.0-alpha.25"
clap = {version="4.4.11",features=["derive"]}
